<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact List</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Address</string>
    <string name="contact_title">Contacts</string>
    <string name="add_button">ADD</string>
    <string name="save_data">Save</string>
    <string name="edit_contact_title">Edit Contact</string>
    <string name="edit_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_new_contact">NewContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_contact">EditContact</string>

</resources>
